fix(CronJob): Be sure that the process search use the newest data
